--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-
-<div class="blog-index">
+<div class="blog-index span8">
   {% assign index = true %}
   {% for post in paginator.posts %}
   {% assign content = post.content %}
@@ -20,7 +19,7 @@ layout: default
     {% endif %}
   </div>
 </div>
-<aside class="sidebar">
+<aside class="sidebar span4">
   {% if site.blog_index_asides.size %}
     {% include_array blog_index_asides %}
   {% else %}
