* Added skills and other content to profile page * Added styling for skills and other content on profile page * Included HTML5shiv.js * Changed profile page file from markdown to straight HTML

--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 ---
-<div class="span8">
+{% if page.sidebar %}
+<div class="span12">
+    {% else %}
+    <div class="span8">
+        {% endif %}
     <div class="blog-index">
       {% assign index = true %}
       {% for post in paginator.posts %}
