Updated skills to use a table and removed the labels to the frameworks section.

--- a/source/profile/index.html
+++ b/source/profile/index.html
@@ -41,37 +41,42 @@ footer: true
 </div>
 
 <h2>Skills</h2>
-<ul class="unstyled skills">
-    <li>C# <span class="label label-info">6 years</span></li>
-    <li>ASP.NET MVC.NET <span class="label label-info">3 years</span></li>
-    <li>ASP.NET Webforms (with <abbr title="Model View Presenter design pattern">MVP</abbr>) <span class="label label-info">5 years</span></li>
-    <li><abbr title="Model View Controller design pattern">MVC</abbr>, <abbr title="Model View Presenter design pattern">MVP</abbr>, <abbr title="Model View ViewModel design pattern">MVVM</abbr> <span class="label label-info">advanced</span></li>
-    <li><abbr title="Test driven development">TDD</abbr> (more specifically <abbr title="Behavioral Driven Development">BDD</abbr>) <span class="label label-info">intermediate</span></li>
-    <li>N-Tier development <span class="label label-info">advanced</span></li>
-    <li><abbr title="Service-oriented architecture">SOA</abbr> <span class="label label-info">intermediate</span></li>
-    <li><abbr title="Windows Communication Foundation">WCF</abbr> <span class="label label-info">novice</span></li>
-    <li>ReSharper <span class="label label-info">advanced</span></li>
-    <li>Git <span class="label label-info">advanced</span></li>
-    <li>AGILE (SCRUM specifically) <span class="label label-info">intermediate</span></li>
-    <li>HTML5 <span class="label label-info">advanced</span></li>
-    <li>CSS3 <span class="label label-info">advanced</span></li>
-    <li>JavaScript <span class="label label-info">intermediate</span></li>
-    <li>PowerShell <span class="label label-info">intermediate</span></li>
-    <li>Ruby <span class="label label-info">novice</span></li>
-    <li><abbr title="Structured Query Language">SQL</abbr> <span class="label label-info">novice</span></li>
-</ul>
+        <table class="table">
+            <thead>
+            <tr><th>Skill</th><th>Experience</th></tr>
+            </thead>
+            <tbody>
+            <tr><td>C#</td><td><span class="label label-info">6 years</span></td></tr>
+            <tr><td>ASP.NET MVC.NET</td><td><span class="label label-info">3 years</span></td></tr>
+            <tr><td>ASP.NET Webforms (with <abbr title="Model View Presenter design pattern">MVP</abbr>)</td><td><span class="label label-info">5 years</span></td></tr>
+            <tr><td><abbr title="Model View Controller design pattern">MVC</abbr>, <abbr title="Model View Presenter design pattern">MVP</abbr>, <abbr title="Model View ViewModel design pattern">MVVM</abbr></td><td><span class="label label-info">advanced</span></td></tr>
+            <tr><td><abbr title="Test driven development">TDD</abbr> (more specifically <abbr title="Behavioral Driven Development">BDD</abbr>)</td><td><span class="label label-info">intermediate</span></td></tr>
+            <tr><td>N-Tier development</td><td><span class="label label-info">advanced</span></td></tr>
+            <tr><td><abbr title="Service-oriented architecture">SOA</abbr></td><td><span class="label label-info">intermediate</span></td></tr>
+            <tr><td><abbr title="Windows Communication Foundation">WCF</abbr></td><td><span class="label label-info">novice</span></td></tr>
+            <tr><td>ReSharper</td><td><span class="label label-info">advanced</span></td></tr>
+            <tr><td>Git</td><td><span class="label label-info">advanced</span></td></tr>
+            <tr><td>AGILE (SCRUM specifically)</td><td><span class="label label-info">advanced</span></td></tr>
+            <tr><td>HTML5</td><td><span class="label label-info">advanced</span></td></tr>
+            <tr><td>CSS</td><td><span class="label label-info">advanced</span></td></tr>
+            <tr><td>JavaScript</td><td><span class="label label-info">intermediate</span></td></tr>
+            <tr><td>PowerShell</td><td><span class="label label-info">intermediate</span></td></tr>
+            <tr><td>Ruby</td><td><span class="label label-info">novice</span></td></tr>
+            <tr><td><abbr title="Structured Query Language">SQL</abbr></td><td><span class="label label-info">novice</span></td></tr>
+            </tbody>
+        </table>
         <h2>Frameworks and Libraries</h2>
 <ul class="unstyled skills">
-    <li>Entity Framework <span class="label label-info">novice</span></li>
-    <li>AutoMapper <span class="label label-info">intermediate</span></li>
-    <li>StructureMap <span class="label label-info">intermediate</span></li>
-    <li>nUnit <span class="label label-info">intermediate</span></li>
-    <li>FakeItEasy <span class="label label-info">novice</span></li>
-    <li>NLog and log4net <span class="label label-info">intermediate</span></li>
-    <li>jQuery <span class="label label-info">intermediate</span></li>
-    <li>Knockout.js <span class="label label-info">novice</span></li>
-    <li>Knockback (Backbone and Knockout) <span class="label label-info">novice</span></li>
-    <li>Bootstrap <span class="label label-info">intermediate</span></li>
-    <li>NService Bus <span class="label label-info">novice</span></li>
-
+    <li>Entity Framework</li>
+    <li>AutoMapper</li>
+    <li>StructureMap</li>
+    <li>nUnit</li>
+    <li>MachineSpecs</li>
+    <li>FakeItEasy</li>
+    <li>NLog and log4net</li>
+    <li>jQuery</li>
+    <li>Knockout.js</li>
+    <li>Knockback (Backbone and Knockout)</li>
+    <li>Bootstrap</li>
+    <li>NService Bus</li>
 </ul>
