--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+page_asides: [custom/asides/about.html, asides/recent_posts.html, custom/asides/tag_cloud.html]
 ---
 {% if page.sidebar %}
 <div class="span12">
