--- a/source/profile/index.html
+++ b/source/profile/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Andrew Smith
-subtitle: "Profile"
+subtitle: Profile
 date: 2013-01-09 11:29
 comments: false
 sharing: true
