--- a/source/profile/index.html
+++ b/source/profile/index.html
@@ -25,7 +25,7 @@ footer: true
             <li><a rel="me" class="url twitter" href="http://twitter.com/software_craft"><i class="icon-twitter"></i>
                 @software_craft</a></li>
             <li>
-                <a rel="me" class="url google-plus" href="http://plus.google.com/u/0/101345975897161918424;"><i class="icon-google-plus"></i>
+                <a rel="author" class="url google-plus" href="http://plus.google.com/117652511575279353270?rel=author"><i class="icon-google-plus"></i>
                     andrew.softwarecraftsmen</a></li>
             <li><a rel="me" class="url github" href="http://github.com/softwarecraftsmen"><i class="icon-github"></i>
                 softwarecraftsmen</a></li>
